# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  gendiff_file.cast  pyproject.toml  sonar-project.properties
.github/workflows/: hexlet-check.yml  sonar.yml
gendiff/: diff_builder.py  engine.py  loader.py
gendiff/formatters/: __init__.py  format_json.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_code.egg-info/: PKG-INFO
tests/: test_gendiff.py  test_json.py  test_json_recursion.py  test_plain.py  test_yaml.py
